Fix button text align

--- a/styles.css
+++ b/styles.css
@@ -116,9 +116,7 @@ li.infoElement {
 }
 
 button {
-    font-family: Monospaced;
     font-weight: 300;
-    float: right;
     border: none;
     border-radius: 50%;
     text-align: center;
@@ -127,6 +125,7 @@ button {
 }
 
 button.plus {
+    float: right;
     font-size: 40px;
     width: 50px;
     height: 50px;
